psterile44-7966217.err
Info in <TUnixSystem::ACLiC>: creating shared library /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C.so
sh: /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C.d: Permission denied
Warning in <ACLiC>: Failed to generate the dependency file for /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C.so
In file included from /tmp/rootcint_lm9VPF.h:4:0,
                 from /tmp/nCSruF_cint.cxx:1:
/home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_linkdef.h:3:0: error: unterminated #ifdef
 #ifdef __CINT__
 ^
Error: external preprocessing failed. :0:
!!!Removing /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_dict.cxx /home/fatemigh/projects/rpp-jillings/fatemigh/sterile/Likelihood/LikelihoodSterile_modified6_C_ACLiC_dict.h !!!
Error: Function LikelihoodSterile_modified6(44) is not defined in current scope  :0:
*** Interpreter error recovered ***
